--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -26,3 +26,24 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+
+    - name: Test Reporter
+      # You may pin to the exact commit or the version.
+      # uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5
+      uses: dorny/test-reporter@v1.9.1
+      with:
+        # Name or regex of artifact containing test results
+        artifact: "**/*.trx"
+        # Name of the check run
+        name: Name of the report
+        # Comma-separated list of paths to test results
+        # Supports wildcards via [fast-glob](https://github.com/mrmlnc/fast-glob)
+        # All matched result files must be of same format    
+        path: "**/*.trx"
+        # The fast-glob library that is internally used interprets backslashes as escape characters.
+        # If enabled, all backslashes in provided path will be replaced by forward slashes and act as directory separators.
+        # It might be useful when path input variable is composed dynamically from existing directory paths on Windows.
+        path-replace-backslashes: dotnet-trx
+        reporter: all
+        list-suites: all
+        list-tests: all     
