--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -40,10 +40,4 @@ jobs:
         # Supports wildcards via [fast-glob](https://github.com/mrmlnc/fast-glob)
         # All matched result files must be of same format    
         path: "**/*.trx"
-        # The fast-glob library that is internally used interprets backslashes as escape characters.
-        # If enabled, all backslashes in provided path will be replaced by forward slashes and act as directory separators.
-        # It might be useful when path input variable is composed dynamically from existing directory paths on Windows.
-        path-replace-backslashes: dotnet-trx
-        reporter: all
-        list-suites: all
-        list-tests: all     
+        reporter: dotnet-trx
