--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -32,12 +32,9 @@ jobs:
       # uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5
       uses: dorny/test-reporter@v1.9.1
       with:
-        # Name or regex of artifact containing test results
-        artifact: "**/*.trx"
-        # Name of the check run
         name: Name of the report
         # Comma-separated list of paths to test results
         # Supports wildcards via [fast-glob](https://github.com/mrmlnc/fast-glob)
         # All matched result files must be of same format    
-        path: "**/*.trx"
+        path: "**/TestResults/*.trx"
         reporter: dotnet-trx
