--- a/SauceDemo/SauceDemoTests.csproj
+++ b/SauceDemo/SauceDemoTests.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
+    <PackageReference Include="DotNetSeleniumExtras.WaitHelpers" Version="3.11.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="9.0.0" />
@@ -26,13 +27,13 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="LogginIn\" />
-    <Folder Include="CheckOut\" />
-    <Folder Include="AddItemsToCart\" />
+    <ProjectReference Include="..\SauceDemo.Pages\SauceDemo.Customizations.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SauceDemo.Pages\SauceDemo.Pages.csproj" />
+    <None Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
