--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -15,6 +15,16 @@ jobs:
     permissions: write-all
     runs-on: ubuntu-latest
 
+    env:
+      BASE_URL: "https://www.saucedemo.com"
+      USER_STANDARD: "standard_user"
+      USER_LOCKED_OUT: "locked_out_user"
+      USER_PROBLEM: "problem_user"
+      USER_PERFORMANCE: "performance_glitch_user"
+      USER_ERROR: "error_user"
+      USER_VISUAL: "visual_user"
+      PASSWORD: "secret_sauce"
+
     steps:
     - uses: actions/checkout@v4
     - name: Setup .NET
