Add different configurations

--- a/SauceDemo/SauceDemoTests.csproj
+++ b/SauceDemo/SauceDemoTests.csproj
@@ -7,6 +7,7 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <Configurations>QA;DEV</Configurations>
   </PropertyGroup>
 
   <ItemGroup>
@@ -31,9 +32,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <None Update="appsettings.json">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
+	<None Update="appsettings.$(Configuration).json">
+	  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	</None>
   </ItemGroup>
 
 </Project>
