--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -17,7 +17,7 @@ jobs:
 
     strategy:
       matrix:
-        category: [Login, Checkout, User, Cart]
+        category: [Login, Checkout, ErrorUser, VisualUser, Cart]
 
     env:
       USER_STANDARD: "standard_user"
@@ -30,25 +30,24 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
+  
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 8.0.x
+
     - name: Restore dependencies
       run: dotnet restore
+
     - name: Build
       run: dotnet build --no-restore
+
     - name: Test ${{ matrix.category }}
       run: dotnet test --no-build --verbosity normal --logger "trx" --filter TestCategory=${{ matrix.category }}
 
     - name: Test Reporter
-      # You may pin to the exact commit or the version.
-      # uses: dorny/test-reporter@31a54ee7ebcacc03a09ea97a7e5465a47b84aea5
       uses: dorny/test-reporter@v1.9.1
       with:
-        name: Name of the report
-        # Comma-separated list of paths to test results
-        # Supports wildcards via [fast-glob](https://github.com/mrmlnc/fast-glob)
-        # All matched result files must be of same format    
+        name: Report for ${{ matrix.category }} tests   
         path: "**/TestResults/*.trx"
         reporter: dotnet-trx
